# CMakeTechnology

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/almalence/opencam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/almashot/: CMakeLists.txt
app/src/main/cpp/bestshot/: CMakeLists.txt  bestshot.cpp
app/src/main/cpp/dro/: CMakeLists.txt  almashot-dro.cpp
app/src/main/cpp/groupshot/: CMakeLists.txt  almashot-seamless.cpp
app/src/main/cpp/hdrprocessing/: CMakeLists.txt  almashot-hdr.cpp
app/src/main/cpp/hiresportrait/: CMakeLists.txt  hiresportrait.cpp
app/src/main/cpp/histogram/: CMakeLists.txt
app/src/main/cpp/movingobjects/: CMakeLists.txt  almashot-moving.cpp
app/src/main/cpp/nightprocessing/: CMakeLists.txt  almashot-night.cpp
app/src/main/cpp/objectremoval/: CMakeLists.txt  almashot-clr.cpp
app/src/main/cpp/panorama/: CMakeLists.txt  VFGyro-jni.cpp  almashot-pano.cpp
app/src/main/cpp/preshot/: CMakeLists.txt  preshot.cpp
app/src/main/cpp/sequence/: CMakeLists.txt  almashot-sequence.cpp
app/src/main/cpp/swapheap/: CMakeLists.txt  swapheap.cpp
app/src/main/cpp/utils/: CMakeLists.txt
app/src/main/cpp/utils-jni/: CMakeLists.txt  ImageConversion.cpp
app/src/main/cpp/video/: CMakeLists.txt
app/src/main/cpp/yuvimage/: CMakeLists.txt  YuvToJpegEncoderMT.cpp  yuvimage.cpp
app/src/main/java/com/almalence/opencam/: ApplicationScreen.java  Fragment.java  MainScreen.java  Plugin.java  PluginManager.java  PluginManagerBase.java  PluginViewfinder.java  SavingService.java
app/src/main/java/com/almalence/opencam/cameracontroller/: CameraController.java
app/src/main/java/com/almalence/opencam/ui/: AlmalenceGUI.java
app/src/main/java/com/almalence/plugins/capture/burst/: BurstCapturePlugin.java
app/src/main/java/com/almalence/plugins/capture/video/: VideoCapturePlugin.java
app/src/main/java/com/almalence/plugins/processing/groupshot/: GroupShotCore.java
app/src/main/java/com/almalence/plugins/processing/multishot/: MultiShotProcessingRouter.java
app/src/main/java/com/almalence/plugins/processing/objectremoval/: AlmaCLRShot.java
app/src/main/java/com/almalence/plugins/processing/panorama/: PanoramaProcessingPlugin.java
app/src/main/java/com/almalence/plugins/processing/preshot/: PreshotProcessingPlugin.java
app/src/main/java/com/almalence/plugins/processing/sequence/: AlmaCLRShot.java
app/src/main/java/com/almalence/plugins/vf/aeawlock/: AeAwLockVFPlugin.java
app/src/main/java/com/almalence/plugins/vf/barcodescanner/: BarcodeHistoryListDialog.java
app/src/main/java/com/almalence/plugins/vf/focus/: FocusVFPlugin.java
app/src/main/java/com/almalence/plugins/vf/grid/: GridVFPlugin.java
app/src/main/java/com/almalence/plugins/vf/histogram/: HistogramVFPlugin.java
app/src/main/java/com/almalence/plugins/vf/zoom/: ZoomVFPlugin.java
app/src/main/java/com/almalence/sony/cameraremote/: ServerDevice.java
app/src/main/java/com/almalence/sony/cameraremote/utils/: WifiHandler.java  WifiListener.java
app/src/main/java/com/almalence/ui/: Panel.java  RotateImageView.java  RotateLayout.java
app/src/main/java/com/almalence/ui/Switch/: Switch.java  TransformationMethodCompat.java
app/src/main/java/com/almalence/util/exifreader/lang/: Rational.java
app/src/main/java/com/almalence/util/exifreader/metadata/: Directory.java
app/src/main/java/com/almalence/util/exifreader/metadata/exif/: ExifSubIFDDescriptor.java
app/src/main/java/com/almalence/widget/: OpenCameraSolidWidgetConfigureActivity.java  OpenCameraWidgetConfigureActivity.java
app/src/test/java/com/almalence/opencam/: ExampleUnitTest.java
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/FFTEm/: CMakeLists.txt
